titulares y firmantes autorizados en las cuentas bancarias
