# accounts/src/main/java/com/project/accounts/entity/Holder.java
@@ -5,18 +5,14 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
-
-import java.math.BigDecimal;
-
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
-@Document(collection = "accounts")
-public class Account {
+@Document(collection = "holders")
+public class Holder {
     @Id
     private String id;
-    private String accountNumber;
-    private String accountType;
-    private String clientId;
-    private BigDecimal balance;
+    private String accountId;
+    private String authorizedSignatory;
+    private String holderName;
 }
